--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
-body{
-    background-color: black;
+/* ▓▒▒▒▒▒▒▒▒▒▒▒ CHANGE THE DEFAULT STYLE ▒▒▒▒▒▒▒▒▒▒▒▓ */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* ▓▒▒▒▒▒▒▒▒▒▒▒ VARIANT OF MAC PC ▒▒▒▒▒▒▒▒▒▒▒▓ */
+.variant button {
+    margin-right: 10px;
+    padding: 10px 20px;
+    background-color: rgb(235, 235, 235);
+    border: 2px solid rgb(140, 151, 210);
+    border-radius: 5px;
+}
+
+/* ▓▒▒▒▒▒▒▒▒▒▒▒ PRICING ▒▒▒▒▒▒▒▒▒▒▒▓ */
+.pricing .row {
+    border-bottom: 2px solid rgb(179, 213, 245);
+    padding: 20px 0;
+    font-size: 18px !important;
 }
